# Serpent

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
include/: Serpent.hpp
src/: Serpent.cpp  Serpent.hpp  bindings.cpp  hooks.cpp  main.cpp  script.cpp  wrapper.cpp  wrapper.hpp
src/ui/: ScriptItem.cpp  ScriptItem.hpp  ScriptsLayer.cpp  ScriptsLayer.hpp
